--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-recursive-include sionna *.csv *.npy *.json *.xml *.ply
-#include ./sionna *.csv, *.npy
+recursive-include OpenNTN *.csv *.npy *.json *.xml *.ply
+#include ./OpenNTN *.csv, *.npy
 prune test
